--- a/docs/.vuepress/components/MaterialCenter/Block/List/Card.scss
+++ b/docs/.vuepress/components/MaterialCenter/Block/List/Card.scss
@@ -3,12 +3,12 @@
 }
 
 .card {
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
 
-  flex: 0 0 50%;
-  width: 50%;
-  max-width: 50%;
+  flex: 0 0 25%;
+  width: 25%;
+  max-width: 25%;
 
   .content {
     position: relative;
@@ -25,13 +25,18 @@
       align-items: center;
       justify-content: center;
 
-      .snapshot {
-        display: block;
-        max-width: 100%;
-        height: 315px;
-        border-radius: 4px;
-        box-shadow: 0 6px 18px 0 rgba(82, 94, 102, 0.15);
-        transform: scale(0.6);
+      .screenshot {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 200px;
+        transition: all 0.3s ease;
+        background-color: #fff;
+        img {
+          max-width: 100%;
+          max-height: 100%;
+        }
       }
     }
 
@@ -79,9 +84,9 @@
         align-items: center;
         justify-content: center;
         width: 50%;
-        height: 48px;
-        line-height: 48px;
-        font-size: 14px;
+        height: 42px;
+        line-height: 42px;
+        font-size: 12px;
         font-weight: 700;
         background: #2077ff;
         color: #fff;
@@ -98,7 +103,7 @@
     }
 
     &:hover {
-      transform: translateY(-6px);
+      transform: translateY(-12px);
     }
 
     &:hover .item-action {
@@ -106,15 +111,15 @@
     }
 
     &:hover .item-info {
-      transform: translateY(-20px);
+      transform: translateY(-26px);
     }
   }
 }
 
 @media screen and (max-width: 750px) {
   .card {
-    flex: 0 0 100%;
-    width: 100%;
-    max-width: 100%;
+    flex: 0 0 50%;
+    width: 50%;
+    max-width: 50%;
   }
 }
