--- a/docs/.vuepress/components/MaterialCenter/Block/Banner/index.scss
+++ b/docs/.vuepress/components/MaterialCenter/Block/Banner/index.scss
@@ -1,11 +1,8 @@
 .container {
   position: relative;
   height: 380px;
-  background-color: #6875e9;
-  background-image: url(https://img.alicdn.com/tfs/TB1ZjJZDsbpK1RjSZFyXXX_qFXa-3800-1778.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center 0;
+  background: #6875e9 url(https://img.alicdn.com/tfs/TB1ZjJZDsbpK1RjSZFyXXX_qFXa-3800-1778.png) no-repeat center 0 /
+    cover;
 
   .content {
     position: relative;
