feat: update css

--- a/docs/.vuepress/components/MaterialCenter/components/Content/ScaffoldCard.scss
+++ b/docs/.vuepress/components/MaterialCenter/components/Content/ScaffoldCard.scss
@@ -4,6 +4,13 @@
   max-width: 50%;
 
   .content {
+    .screenshot {
+      img {
+        max-width: 100%;
+        height: 318px;
+      }
+    }
+
     &:hover {
       transform: translateY(-6px);
     }
