--- a/docs/.vuepress/components/MaterialCenter/components/Content/BlockCard.scss
+++ b/docs/.vuepress/components/MaterialCenter/components/Content/BlockCard.scss
@@ -4,6 +4,13 @@
   max-width: 25%;
 
   .content {
+    .screenshot {
+      img {
+        max-width: 100%;
+        max-height: 100%;
+      }
+    }
+
     &:hover {
       transform: translateY(-12px);
     }
