feat: update home-page

--- a/docs/.vuepress/styles/palette.styl
+++ b/docs/.vuepress/styles/palette.styl
@@ -3,3 +3,17 @@ $textColor = #2c3e50
 $borderColor = #eaecef
 $codeBgColor = #282c34
 $backgroundColor = #ffffff
+
+$homePageWidth = 100vm
+
+.theme-container.home-page > .home {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.theme-container > .navbar .site-name {
+  display: none;
+}
+.theme-container > .navbar .logo {
+  transform: scale(0.66, 0.69);
+}
