--- a/docs/.vuepress/components/Home/Body/components/Toolkit/index.scss
+++ b/docs/.vuepress/components/Home/Body/components/Toolkit/index.scss
@@ -1,9 +1,10 @@
 .toolkit-container {
   display: flex;
   justify-content: center;
+  padding: 182px 40px 102px;
   .toolkit-wrapper {
-    padding: 222px 0 142px 0;
-    overflow-x: auto;
+    padding: 40px;
+    overflow: hidden;
     display: flex;
     justify-content: flex-start;
     .toolkit-text {
@@ -30,7 +31,7 @@
     .toolkit-img {
       width: 745px;
       height: 447px;
-      box-shadow: 5px 10px 30px rgba(0,0,0,.15);
+      box-shadow: 0px 5px 45px rgba(0,0,0,.15);
       border-radius: 4%;
     }
   }
