--- a/docs/.vuepress/components/Home/Body/components/Pack/components/Carousel.scss
+++ b/docs/.vuepress/components/Home/Body/components/Pack/components/Carousel.scss
@@ -4,39 +4,38 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  .nav {
-    width: 50%;
-    .nav-items {
-      line-height: 40px;
-      border-bottom: 1px solid rgba(151, 151, 151, 0.32);
-      margin-bottom: 41px;
-      padding: 0;
-      display: flex;
-      justify-content: space-around;
-      .nav-item {
-        color: #b7b7b7;
-        font-size: 18px;
-        display: inline-block;
-        list-style: none;
-        padding: 0 15px;
-        cursor: pointer;
-      }
-      .nav-item-active {
-        color: #252020;
-        font-size: 16px;
-        border-bottom: 2px solid #152dff;
-      }
+  .nav-items {
+    width: 1100px;
+    margin-bottom: 41.86px;
+    line-height: 40px;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid rgba(151, 151, 151, 0.32);
+    .nav-item {
+      text-align: center;
+      min-width: 120px;
+      color: #b7b7b7;
+      font-size: 21px;
+      display: inline-block;
+      list-style: none;
+      padding: 0 20px 15px;
+      cursor: pointer;
+    }
+    .nav-item-active {
+      color: #252020;
+      font-size: 16px;
+      border-bottom: 2px solid #152dff;
     }
   }
   .carousel-message {
     font: 16px/30px PingFangSC-Light;
-    margin: 41px auto 0 auto;
+    margin: 0px;
     max-width: 539px;
     text-align: center;
   }
   .quick-start {
     display: block;
-    margin: 50px auto;
+    margin: 21.5px auto;
     width: 160px;
   }
   .carousel-wrapper {
@@ -75,12 +74,12 @@
       box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
     }
     .left {
-      top: 50%;
+      top: 41%;
       transform: translateY(-50%);
       left: 0;
     }
     .right {
-      top: 50%;
+      top: 41%;
       transform: translateY(-50%);
       right: 0;
     }
@@ -98,6 +97,7 @@
   .carousel-container {
     height: auto;
     .nav-items {
+      max-width: 60%;
       justify-content: flex-start;
       overflow-x: auto;
       .nav-item {
