--- a/docs/.vuepress/components/Home/Body/components/Pack/components/Carousel.scss
+++ b/docs/.vuepress/components/Home/Body/components/Pack/components/Carousel.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   .nav-items {
-    width: 1100px;
+    width: 70%;
     margin-bottom: 41.86px;
     line-height: 40px;
     display: flex;
