--- a/docs/.vuepress/components/Home/Body/components/Pack/components/Carousel.scss
+++ b/docs/.vuepress/components/Home/Body/components/Pack/components/Carousel.scss
@@ -39,7 +39,8 @@
     width: 160px;
   }
   .carousel-wrapper {
-    background: no-repeat center/95% url(~@assets/Home/Body/Pack/MacBook.png);
+    background: no-repeat center/95%
+      url('https://img.alicdn.com/imgextra/i1/O1CN01GPIErY1cxzS5YoJAt_!!6000000003668-2-tps-2468-1332.png');
     width: 1234px;
     height: 666px;
     margin: auto;
